# MMartinezPortfolioRedo

./: README.md  project.txt  setup.sh  setup_leetcodeclone.sh
LeetcodeClone/: index.html  index.pug  (+4 more)
ReactProjects/staffing-flow/: .env.example  .env.quickstart  .gitignore  .prettierignore  API_GUIDE.md  API_IMPLEMENTATION_SUMMARY.md  API_STRUCTURE.md  BACKLOG_PROPAGATION_ENGINE.md  BACKLOG_PROPAGATION_IMPLEMENTATION.md  BACKLOG_PROPAGATION_QUICK_REF.md  BACKLOG_PROPAGATION_SAMPLE_DATA.sql  BACKLOG_PROPAGATION_SCHEMA.sql  BUFFER_SLA_CONFIGURATION.md  CI_GUIDE.md  CI_QUICKREF.txt  CI_SUMMARY.md  COMPLETE_DATABASE_SCHEMA.sql  COMPLETION_REPORT.md  COMPONENT_ARCHITECTURE.md  CSV_EXPORT_COMPLETION.md  CSV_IMPORT_TEMPLATES.md  DASHBOARD_COMPLETION_SUMMARY.md  DATABASE_SETUP.md  DATABASE_STATUS.md  DATABASE_VERIFICATION.md  DEMAND_CHARTS_BUILD_SUMMARY.md  DEMAND_CHARTS_OVERVIEW.md  DEMAND_CHARTS_QUICK_REFERENCE.md  DEMAND_CSV_EXPORT_GUIDE.md  DEMAND_EDITOR_ARCHITECTURE.md  DEMAND_EDITOR_QUICK_START.md  DEMAND_EDITOR_UI_SUMMARY.md  DEPARTMENT_QUICK_START.md  DEPARTMENT_UI_DOCUMENTATION.md  DEPARTMENT_UI_README.md  DEPARTMENT_UI_SUMMARY.md  DIAGNOSTICS_REPORT.md  DRAGDROP_IMPLEMENTATION.md  EMPLOYEE_PORTAL_DOCUMENTATION.md  EMPLOYEE_PORTAL_QUICK_START.md  (+74 more)
ReactProjects/staffing-flow/.github/: ACTIONS_STATUS.md  PULL_REQUEST_TEMPLATE.md
ReactProjects/staffing-flow/.husky/: post-checkout
ReactProjects/staffing-flow/api/: config.ts  server.ts
ReactProjects/staffing-flow/csv-templates/: README.md  department_import_template.csv  schedule_import_template.csv  staff_import_template.csv  timeoff_import_template.csv  user_import_template.csv
ReactProjects/staffing-flow/docs/: REFRESH_TOKEN_FLOW.md  REFRESH_TOKEN_QUICK_REFERENCE.md
ReactProjects/staffing-flow/python/: __init__.py  config.py  main.py
ReactProjects/staffing-flow/scripts/: ci-local.sh  ci-quick.sh
ReactProjects/staffing-flow/src/: App.css  App.tsx  config.ts  vite-env.d.ts
ReactProjects/staffing-flow/tests/: test_main.py
(+806 files in other folders)
